--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -2,12 +2,35 @@
  * Home styling
  */
 
+.box, .box_feature, .box_wide
+  float: left
+
+.box
+  margin: 0 50px 0 0
+  width: 350px
+
+.box_feature
+  margin: 0 70px 0 0
+  width: 500px
+
+.box_wide
+  margin: 0 50px 0 0
+  width: 520px
+
+#articles
+
+  ul
+    margin: 0
+
 #books
   
   #book_chart
     height: 180px
 
 #github
+
+  #action_chart
+    height: 200px
 
   ul#actions
 
@@ -16,4 +39,4 @@
 #twitter
 
   #tweet_chart
-    height: 240px
+    height: 200px
