--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -6,6 +6,8 @@
 
 $blue: #4477aa
 
+$light: #bbb
+
 /*
  * Basic elements
  */
@@ -23,7 +25,7 @@ body
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
   font-size: 14px
   font-weight: lighter
-  line-height: 1.8em
+  line-height: 1.6em
   margin: 70px
 
 em
@@ -52,9 +54,8 @@ h2 a, h2 a:visited, h2 a:hover, h3 a, h3 a:visited, h3 a:hover, h4 a, h4 a:visit
   text-decoration: none
 
 p
-  line-height: 1.4em
-  text-align: justify
   margin: 20px 0
+  text-align: justify
 
 strong
   color: $blue
@@ -76,3 +77,9 @@ ul
   height: 200px
   overflow: hidden
   width: 100%
+
+.meta
+  color: $light
+
+.clear_fix
+  clear: both
