--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -11,7 +11,7 @@
   /p#special I'm currently in Las Vegas for #{link_to '#mix11', 'http://live.visitmix.com'}, #{link_to 'follow me!', 'http://twitter.com/fyrerise'}
 
 #boxes
-  .box#about
+  .box_feature#about
     h2 About
     p
       | I'm a .NET and Rails designer, developer, and architect working out of Calgary. I've done extensive development work, and I'll work on almost any technology stack. Drop me a line at 
@@ -21,8 +21,14 @@
     p  
       a(href='http://twitter.com/fyrerise' title='Follow Brandur on Twitter') You should follow me on Twitter.
 
+  .box_feature#projects
+    h2 Projects
+    p Here are the projects that I'm currently involved in.
+
+  .clear_fix
+
   .box#articles
-    h2 Articles
+    h2= link_to 'Articles', 'http://mutelight.org'
     p I <a href="http://mutelight.org">blog about technology</a> and other interesting things. Here are the latest articles that I've written:
     ul
       - @articles.each do |a|
@@ -32,7 +38,7 @@
           span.meta= a.published_at.getlocal.strftime('%b %e, %Y')
 
   .box#books
-    h2 Books
+    h2= link_to 'Books', 'http://www.goodreads.com/review/list/5896508?shelf=read'
     p
       | These days I try to read mostly non-fiction. #{link_to 'My entire reading history', 'http://www.goodreads.com/review/list/5896508?shelf=read'} is available online. 
       - if @book
@@ -40,15 +46,30 @@
     = render :partial => 'book_chart'
 
   .box#facts
-    h2 Facts
+    h2= link_to 'Facts', 'http://facts.brandur.org'
     p
       | I maintain a #{link_to 'facts database', 'http://facts.brandur.org'} to retain knowledge and try to make myself smarter. 
       - if defined?(@fact)
         | Most recently, I added facts on #{link_to @fact.category_name, "http://facts.brandur.org/#{@fact.category_permalink}"}.
     = render :partial => 'facts_chart'
 
-  .box#github
-    h2 GitHub
+  .clear_fix
+
+  .box_wide#twitter
+    h2= link_to 'Twitter', :twitter
+    = render :partial => 'tweet_chart'
+    p Microblogging lowers the barrier of broadcasting interesting things online. Here are my latest tweets:
+    ul
+      - @tweets.each do |t|
+        li
+          = raw t.content_html
+          = ' '
+          span.meta= link_to distance_of_time_in_words(t.published_at.getlocal, Time.now, true), t.permalink
+    p= link_to "Every one of my #{pluralize(Tweet.count, 'tweet')}", :twitter
+
+  .box_wide#github
+    h2= link_to 'GitHub', 'https://github.com/brandur'
+    = render :partial => 'action_chart'
     p GitHub's is today's resume for the professional coder.
     ul#actions
       - @actions.each do |a|
@@ -58,6 +79,7 @@
           span.meta= link_to distance_of_time_in_words(a.published_at.getlocal, Time.now, true), a.permalink
           / GitHub's in our chain of trust
           = raw a.content_html
+    p= link_to "See my Github profile", 'https://github.com/brandur'
 
   /.box#photos
     h2 Photos
@@ -69,7 +91,7 @@
     .clear
     p My favorite collections of photos are from when <a href="http://www.flickr.com/photos/brandurleach/collections/72157613774765987/">I visited Japan</a>, and when <a href="http://www.flickr.com/photos/brandurleach/collections/72157601552888447/">I stayed in Iceland</a>.
 
-  .box#sel
+  /.box#self
     h2 Self-development
     ul
       li Meditate 15 minutes per day to clear the mind, and maintain focus.
@@ -81,15 +103,7 @@
       li Wake at 4:30 AM, and finish personal projects in the 2-3 hours before work. #{link_to '6', 'http://www.sebastianmarshall.com/working-full-time-where-to-find-time-to-start-a-side-business'}
       li Work on tangible stuff, document it, and claim credit. #{link_to '7', 'http://www.sebastianmarshall.com/how-to-get-a-raise'}
 
-  .box#twitter
-    h2= link_to 'Twitter', :twitter
-    p Microblogging lowers the barrier of broadcasting interesting things online. Here are my latest tweets:
-    ul
-      - @tweets.each do |t|
-        li
-          = raw t.content_html
-          = ' '
-          span.meta= link_to distance_of_time_in_words(t.published_at.getlocal, Time.now, true), t.permalink
-    p= link_to "Every one of my #{pluralize(Tweet.count, 'tweet')}", :twitter
-    = render :partial => 'tweet_chart'
+  .clear_fix
+
+= render :partial => 'footer'
 
