* adding Twitter index action * moving charts to their own view directory (so they can be shared) * adding CSS3 columns mixin

--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -1,3 +1,14 @@
+@mixin columns($count, $width, $gap)
+  column-count: $count
+  column-width: $width
+  column-gap: $gap
+  -moz-column-count: $count
+  -moz-column-width: $width
+  -moz-column-gap: $gap
+  -webkit-column-count: $count
+  -webkit-column-width: $width
+  -webkit-column-gap: $gap
+
 @mixin transition($property, $duration)
   transition: $property $duration
   -moz-transition: $property $duration
