--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -17,26 +17,28 @@
   margin: 0 50px 0 0
   width: 520px
 
-#articles
+.boxes
 
-  ul
-    margin: 0
+  #articles
 
-#books
-  
-  #book_chart
-    height: 180px
+    ul
+      margin: 0
 
-#github
+  #books
+    
+    #book_chart
+      height: 180px
 
-  #action_chart
-    height: 200px
+  #github
 
-  ul#actions
+    #action_chart
+      height: 200px
 
-    .details
+    ul#actions
 
-#twitter
+      .details
 
-  #tweet_chart
-    height: 200px
+  #twitter
+
+    #tweet_chart
+      height: 200px
