--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -24,7 +24,7 @@ body
   background: #fff
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif
   font-size: 14px
-  font-weight: lighter
+  font-weight: 300
   line-height: 1.6em
   margin: 70px
 
