--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,8 +2,14 @@ doctype 5
 html
   head
     title= content_for?(:title) ? yield(:title) : 'brandur.org'
-    = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js'
     = stylesheet_link_tag    'application', :debug => Rails.env.development?
+    /[if lt IE 9]
+      link rel='stylesheet' href='/columnal/ie.css' type='text/css' media='screen'
+    /[if lte IE 7]
+      link rel='stylesheet' href='/columnal/fixed-984px-ie.css' type='text/css' media='screen'
+    /[if lte IE 6]
+      link rel='stylesheet' href='/columnal/ie6-984px.css' type='text/css' media='screen'
+    = javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js'
     = javascript_include_tag 'application', :debug => Rails.env.development?
     = csrf_meta_tags
     meta http-equiv='content-type' content='text/html; charset=UTF-8'
