--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -16,7 +16,7 @@
         | I'm a .NET and Rails designer, developer, and architect working out of Calgary. I've done extensive development work, and I'll work on almost any technology stack. Drop me a line at 
         a(href='mailto:brandur@mutelight.org') brandur@mutelight.org
         | .
-      p I'm interested in energy and how it relates to our society, muay thai, breakdancing, symphonic metal, surfing, and the guitar.
+      p I'm interested in energy and how it relates to our society, longboarding, muay thai, breakdancing, symphonic metal, surfing, and the guitar.
       p  
         a(href='http://twitter.com/fyrerise' title='Follow Brandur on Twitter') You should follow me on Twitter.
 
