--- a/app/views/charts/_action_chart.html.slim
+++ b/app/views/charts/_action_chart.html.slim
@@ -15,7 +15,8 @@
             categories: [ #{format_github_action_stats(@action_stats).map{|s| "'#{s['month']}'"}.join(', ')} ],
             labels: {
               rotation: -45,
-              align: 'right'
+              align: 'right', 
+              step: #{defined?(is_compact) && is_compact ? 2 : 1}
             },
           },
           yAxis: {
