--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,3 +1,4 @@
 #footer
-  p.meta
-    | This website is open source, and #{link_to 'available on Github', 'http://github.com/brandur/dorian'}.
+  footer
+    p.meta
+      | This website is open source, and #{link_to 'available on Github', 'http://github.com/brandur/dorian'}.
