* adding books landing page

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -80,6 +80,12 @@ ul
 .meta
   color: $light
 
+  a, a:visited, a:hover
+    color: $light
+
+  a:hover
+    text-decoration: underline
+
 .row
   margin: 0
 
