* renaming 'tweet_chart' to 'tweets_chart' and likewise with book/books to be consistent with controller naming

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -11,9 +11,9 @@
 
 .row
   .col_6
-    = render :partial => 'charts/book_chart'
+    = render :partial => 'charts/books_chart'
   .col_6.last
-    = render :partial => 'charts/book_chart_by_num_pages'
+    = render :partial => 'charts/books_chart_by_num_pages'
 
 .row
   .col_12.last#header
