--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -47,7 +47,7 @@
         | These days I try to read mostly non-fiction. #{link_to 'My entire reading history', :books} is available online. 
         - if @book
           | The most recent book that I read was <em>#{@book.title}</em> by #{@book.author}.
-      = render :partial => 'charts/book_chart'
+      = render :partial => 'charts/books_chart'
 
     .col_4.last#facts
       h2= link_to 'Facts', 'http://facts.brandur.org'
@@ -60,7 +60,7 @@
   .row
     .col_6#twitter
       h2= link_to 'Twitter', :twitter
-      = render :partial => 'charts/tweet_chart', :locals => { :is_compact => true }
+      = render :partial => 'charts/tweets_chart', :locals => { :is_compact => true }
       p Microblogging lowers the barrier of broadcasting interesting things online. Here are my latest tweets:
       ul
         - @tweets.each do |t|
