--- a/app/views/charts/_books_chart_by_num_pages.html.slim
+++ b/app/views/charts/_books_chart_by_num_pages.html.slim
@@ -12,7 +12,7 @@
           text: 'Number of Pages Read by Year'
         },
         xAxis: {
-          categories: [ #{@page_stats.map{ |s| s['year'] }.map{ |s| Time.new(s[0..4]) }.map{ |t| t.strftime("%Y") }.map{ |d| "'#{d}'" }.join(', ')} ],
+          categories: [ #{@page_count_by_year.map{|k, v| k.strftime('%Y')}.map{ |d| "'#{d}'" }.join(', ')} ],
           title: {
             text: null
           }
@@ -43,7 +43,7 @@
         },
         series: [{
           name: 'Pages read',
-          data: [ #{@page_stats.map{ |s| s['num_pages'] }.join(', ')} ]
+          data: [ #{@page_count_by_year.map{|k, v| v}.join(', ')} ]
         }]
       });
     });
