--- a/app/views/charts/_tweets_chart.html.slim
+++ b/app/views/charts/_tweets_chart.html.slim
@@ -12,7 +12,7 @@
             text: 'Tweets by Month',
           },
           xAxis: {
-            categories: [ #{format_tweet_stats(@tweet_stats).map{|s| "'#{s['month']}'"}.join(', ')} ],
+            categories: [ #{@tweet_count_by_month.map{|k, v| "'#{k.strftime("%b \\'%y")}'"}.join(', ')} ],
             labels: {
               rotation: -45,
               align: 'right', 
@@ -38,7 +38,7 @@
           },
           series: [{
             name: 'Tweets',
-            data: [ #{format_tweet_stats(@tweet_stats).map{|s| s['count_all']}.join(', ')} ]
+            data: [ #{@tweet_count_by_month.map{|k, v| v}.join(', ')} ]
           }]
        });
     });
