Year jumping on sidebars (+ JS update)
* No longer using Google CDN, everything gets packed into the pipeline
* Adding jQuery plugins: easing/scrollTo/localScroll

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -92,6 +92,16 @@ ul
 .clear_fix
   clear: both
 
+ul.section_list
+  color: $light
+  font-size: 15px
+  list-style-type: none
+  margin: 26px 0
+  padding: 0
+
+  li
+    margin: 6px 0
+
 #header
 
   h1
